--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +17,10 @@
     "bootstrap": "^4.6.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-dual-listbox": "^6.0.3",
     "react-icons": "^5.0.1",
@@ -25,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
     "reactstrap": "^8.9.0",
+    "rsuite": "^5.59.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
